Fixed mobile chat interface on iOS safari

--- a/public/app/styles/ice/iframe.less
+++ b/public/app/styles/ice/iframe.less
@@ -6,6 +6,7 @@
 
 #chat-wrapper {
   overflow: hidden;
+  height: 100vh;
 }
 
 #chatframe {
